welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:30: error: ')' expected but 'case' found.
	case "Z" => recule()
        ^